# aptos-playground

./: .env.example  .gitignore  Cargo.toml  Move.toml  README.md
examples/: airdrop_apt.rs  create_shared_account.rs  mint_injoy_coin.rs  mint_isl.rs
move.coin_pool/: Move.toml
move.coin_pool/sources/: coin_pool.move  injoy_coin.move
move.coin_pool/tests/: coin_pool_test.move
move.nft_launchpad/: Move.toml
move.nft_launchpad/sources/: nft_launchpad.move
move.shared_account/: Move.toml
move.shared_account/sources/: shared_account.move
notes-zh/: 001-EVM與MoveVM.md  002-Aptos的Coin模組.md
sources/: coin_pool.move  island_coin.move
src/: lib.rs  main.rs
tests/: coin_pool_test.move
