[package]
name = "island-coin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aptos-sdk = { git = "https://github.com/aptos-labs/aptos-core" }
url = "2.2.2"
anyhow = "1.0.57"
hex = "0.4.3"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
log = "0.4.8"
pretty_env_logger = "0.4.0"
serde_json = "1.0.81"
tokio = { version =  "1.3", features = ["rt-multi-thread", "macros"] }
teloxide = { version = "0.7", features = ["sqlite-storage", "redis-storage", "bincode-serializer", "macros"] } 
