[package]
name = "aptos-playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aptos-sdk = { git = "https://github.com/aptos-labs/aptos-core", branch = "mainnet" }
url = "2.2.2"
anyhow = "1.0.57"
hex = "0.4.3"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
log = "0.4.8"
pretty_env_logger = "0.4.0"
serde = "1.0.144"
serde_json = "1.0.85"
serde_yaml = "0.9.13"
async-trait = "0.1.53"
tokio = { version =  "1.3", features = ["rt-multi-thread", "macros"] }
